# glora2.0

./: .gitignore  CMakeLists.txt  PERFORMANCE_OPTIMIZATION_README.md  README.md  imgui.ini
.cache/clangd/index/: BinanceClient.cpp.3E541ECFA2EFD89D.idx  BinanceClient.h.2E48D71C6D42B0FD.idx  Camera.h.8B39AC6F9032EEB0.idx  ChartDataManager.h.84FF286C715089C8.idx  ChartRenderer.cpp.9995B713C2E38D41.idx  ChartRenderer.h.D36552D08F0B9CA2.idx  DataManager.cpp.DA42CACF821B9476.idx  DataManager.h.A74B162D6E433E7D.idx  DataModels.h.C6CA100C00C9293E.idx  Database.cpp.660317FF0A05137C.idx  Database.h.E45A83301C50A254.idx  MainWindow.cpp.4081BBBB3FCB9323.idx  MainWindow.h.5E96EC8727CF23C0.idx  Settings.h.54251231F60D4C1E.idx  SettingsManager.cpp.36E9ED858C7FBA15.idx  SettingsManager.h.5A57327E062C6449.idx  ThreadSafeQueue.h.AB5C53D25663BD5B.idx  main.cpp.D26DC917606090C3.idx
plan/: 01_high_level_architecture.md  02_data_acquisition_module.md  03_charting_engine_module.md  04_cross_platform_deployment.md  05_ui_modernization_tech_spec.md  06_system_architecture_report.md  api_implementation_plan.md
schema/: market_data.fbs
src/: main.cpp
src/core/: ChartDataManager.h  DataManager.cpp  DataManager.h  DataModels.h  ThreadSafeQueue.h
src/database/: Database.cpp  Database.h
src/network/: ApiHandler.cpp  ApiHandler.h  BinanceClient.cpp  BinanceClient.h  BinarySerialization.h  WebSocketServer.cpp  WebSocketServer.h
src/render/: Camera.h  ChartData.h  ChartInteractionHandler.h  ChartLayer.h  ChartRenderer.cpp  ChartRenderer.h  MainWindow.cpp  MainWindow.h  WebViewManager.cpp  WebViewManager.h
src/settings/: Settings.h  SettingsManager.cpp  SettingsManager.h
web/: hello_world.html  index.html  package-lock.json  package.json  vite.config.js
web/my-react-app/: package-lock.json  package.json
web/my-react-app/src/: App.jsx  index.css
web/my-react-app/src/components/: AlertPanel.jsx  Chart.jsx  DOM.jsx  FootprintChart.jsx  SessionSummary.jsx  Settings.jsx
web/my-react-app/src/hooks/: useChartWorker.js  useIPC.js
web/my-react-app/src/plugins/: CustomSeries.js
web/my-react-app/src/utils/: BackendWebSocket.js  BinanceWebSocket.js  alerts.js  indicators.js  orderFlow.js
web/my-react-app/src/workers/: chartWorker.js
web/src/: App.jsx
web/src/workers/: symbolWorker.js
